# StatCat

./: .delete_doc_files.sh  .gitignore  AGENTS.md  ALEMBIC_GUIDE.md  BUTTON_CONSISTENCY_FIX.md  COMMIT_SUMMARY.md  DEPLOY_CHECKLIST_LOCAL.md  EMAIL_PUSH_SETUP.md  IMPLEMENTATION_CHECKLIST.md  NEXT_STEPS_LOCAL.txt  ONBOARDING_ARCHITECTURE.md  ONBOARDING_TESTING.md  QUICK_REFERENCE.md  QUICK_START_TESTING.md  README.md  READMEBYGOOGLE.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  Screen Recording 2025-11-19 at 12.03.13.mov  UI_REFERENCE.md  combine.backup.bd  combineModelSheet.csv  commit_phase1.sh  deploy.sh  docker-compose.yml  fix_db.py  package-lock.json  package.json  pyproject.toml  render-backend-only.yaml  render.blueprint.yaml  render.yaml  test_alembic.sh  test_eventos.sh
backend/: .dockerignore  .env.example  .env.production.example  .env.test  =2.3  Dockerfile  alembic.ini  check_athlete_30.py  check_athlete_status.py  clean_event_participants.py  combine.db  combine.db.backup-20251112094827  combine.db.backup-20251112100912  combineModelSheet.xlsx  diagnose_athlete.py  pyproject.toml  requirements.txt  start_backend.sh  test_cors.py  test_manual_smtp.py  test_smtp.py  tmp_login_test.py
backend/alembic/: env.py
backend/alembic/versions/: 07556f6b6c04_merge_heads_for_event_backfill.py  07fad273aefc_add_cascade_delete_to_notification_and_.py  164c04db699d_consolidated_initial_migration.py  1d5b0ba2a9b5_add_goals_conceded_to_match_stat.py  202502041230_normalize_user_statuses.py  202502201200_add_team_posts.py  202502211100_add_team_combine_metrics.py  2025_12_19_1600_add_password_setup_code_table.py  add_events_001.py  (+20 more)
backend/app/: main.py
backend/scripts/: backfill_event_data.py  create_admin.py  generate_demo_athletes.py  seed_test_athletes.py  update_demo_athlete_names.py
backend/tests/: test_athlete_delete_cascade.py  test_athlete_invite.py  test_auth_access.py  test_email_async_bulk.py  test_events_my_events.py  test_events_notification_consistency.py  test_events_rsvp_permissions.py  test_events_update_add_team.py  test_events_visibility_matrix.py  test_password_code_flow.py  test_storage_uploads.py
(+362 files in other folders)
